--- a/.github/workflows/azure-functions-app-dotnet.yml
+++ b/.github/workflows/azure-functions-app-dotnet.yml
@@ -22,6 +22,8 @@ on:
   push:
     branches:
     - "main"
+    paths:
+    - "Ecommerce_Function/**" # Only runs when there is changes to the function
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'EcommerceFunction'   # set this to your function app name on Azure
