--- a/.github/workflows/blazor.yml
+++ b/.github/workflows/blazor.yml
@@ -1,6 +1,7 @@
 name: Deploy Blazor WASM project to Github Pages
 
 on:
+  workflow_dispatch:
   push:
     branches: main
     paths: ./Ecommerce_Blazor/**
