--- a/.github/workflows/blazor.yml
+++ b/.github/workflows/blazor.yml
@@ -19,4 +19,11 @@ jobs:
           dotnet-version: '6.0.x'
 
       - name: Build
-        run: dotnet publish ./Ecommerce_Blazor/Ecommerce_Blazor.csproj
+        run: dotnet publish ./Ecommerce_Blazor/Ecommerce_Blazor.csproj -o release
+        
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./release/wwwroot
