--- a/.github/workflows/blazor.yml
+++ b/.github/workflows/blazor.yml
@@ -1,10 +1,13 @@
 name: Deploy Blazor WASM project to Github Pages
 
+env:
+  PROJECT_NAME: Ecommerce_Blazor
+  
 on:
   workflow_dispatch:
   push:
     branches: main
-    paths: ./Ecommerce_Blazor/**
+    paths: ./${{ env.PROJECT_NAME }}/**
     
 jobs:
   build:
@@ -13,15 +16,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Setup .NET
+      - name: Setting up .NET environment
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '6.0.x'
 
-      - name: Build
-        run: dotnet publish ./Ecommerce_Blazor/Ecommerce_Blazor.csproj -o release
+      - name: Building project
+        run: dotnet publish ./${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj -o release
         
-      - name: Deploy
+      - name: Changing base-tag in index.html
+        run: sed -i 's/<base href="\/" \/>/<base href="\/${{ env.PROJECT_NAME }}\/" \/>/g' release/wwwroot/index.html
+        
+      - name: Deploying to Pages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
