--- a/.github/workflows/blazor.yml
+++ b/.github/workflows/blazor.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet publish ./${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj -o release
         
       - name: Changing base-tag in index.html
-        run: sed -i 's/<base href="\/" \/>/<base href="\/${{ env.PROJECT_NAME }}\/" \/>/g' release/wwwroot/index.html
+        run: sed -i 's/<base href="\/" \/>/<base href="\/Ecommerce\/" \/>/g' release/wwwroot/index.html
         
       - name: Deploying to Pages
         uses: peaceiris/actions-gh-pages@v3
