--- a/Ecommerce_Blazor/Ecommerce_Blazor.csproj
+++ b/Ecommerce_Blazor/Ecommerce_Blazor.csproj
@@ -15,4 +15,11 @@
         <ProjectReference Include="..\Ecommerce_Model\Ecommerce_Model.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Remove="appsettings.json" />
+      <None Include="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
