--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -16,7 +16,7 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
-    paths: Ecommerce_Blazor/**
+    paths: [Ecommerce_Blazor/**, Ecommerce_Function/]
 #  pull_request:
 #    types: [opened, synchronize, reopened, closed]
 #    branches: [ "main" ]
@@ -24,7 +24,7 @@ on:
 # Environment variables available to all jobs and steps in this workflow
 env:
   APP_LOCATION: "Ecommerce_Blazor/" # location of your client code
-  # API_LOCATION: "api" # location of your api source code - optional
+  API_LOCATION: "Ecommerce_Function/" # location of your api source code - optional
   APP_ARTIFACT_LOCATION: "wwwroot/" # location of client code build output
   AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # secret containing deployment token for your static web app
 
