Switched to SQLite database

--- a/Ecommerce_Blazor/appsettings.json
+++ b/Ecommerce_Blazor/appsettings.json
@@ -1,4 +1,3 @@
 ﻿{
-  "BaseAPIUrl": "https://ecommercefunction.azurewebsites.net/api/product",
-  "LocalAPIUrl": "http:localhost:7071/api/product"
+  "BaseAPIUrl": "api"
 }
